--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     </head>
     <meta charset="utf-8"/>
     <body>
+        <a href="./README.md">(Readme)</a>
         <div>
-            <h1>Kingdom of a Thousand Dreams</h1>
+            <h1>Silly Little ANSI Editor</h1>
+
+            <br/>
             <br/>
             <div class="tabs">
                 <div class="tab" id="tab_mapEd">
@@ -203,6 +206,7 @@
                 </div>
             </div>
         </div>
+
 
 		<!-- Include Javascripts Here -->
         
